Fix category tags spacing in new question form

--- a/app/assets/stylesheets/categories.css.scss
+++ b/app/assets/stylesheets/categories.css.scss
@@ -1,6 +1,12 @@
 @import 'mixins';
 @import 'variables';
 
+// general
+
+.category-tags {
+  margin-bottom: 6px;
+}
+
 // collection
 
 .category-group {
